--- a/config.example.json
+++ b/config.example.json
@@ -1,7 +1,7 @@
 {
-  "token": "",
+  "token": "ouMzX24w3vL9_kYf2dbHp1oNgvG5xbhi",
   "notification_channel": 1234,
   "role_to_mention": 1234,
-  "secs_between_ping": 30,
+  "secs_between_ping": 60,
   "prefix": ">"
 }
